@@ -49,7 +49,7 @@ FIELD(PVS, pv, STR, "PV Tags", tags, 7, tags, "pv_tags")
 FIELD(VGS, vg, STR, "Fmt", cmd, 3, vgfmt, "vg_fmt")
 FIELD(VGS, vg, STR, "VG UUID", id, 38, uuid, "vg_uuid")
 FIELD(VGS, vg, STR, "VG", name, 4, string, "vg_name")
-FIELD(VGS, vg, STR, "Attr", cmd, 6, vgstatus, "vg_attr")
+FIELD(VGS, vg, STR, "Attr", cmd, 5, vgstatus, "vg_attr")
 FIELD(VGS, vg, NUM, "VSize", cmd, 5, vgsize, "vg_size")
 FIELD(VGS, vg, NUM, "VFree", cmd, 5, vgfree, "vg_free")
 FIELD(VGS, vg, STR, "SYS ID", system_id, 6, string, "vg_sysid")
@@ -67,7 +67,7 @@ FIELD(VGS, vg, STR, "VG Tags", tags, 7, tags, "vg_tags")
 FIELD(SEGS, seg, STR, "Type", list, 4, segtype, "segtype")
 FIELD(SEGS, seg, NUM, "#Str", area_count, 4, uint32, "stripes")
 FIELD(SEGS, seg, NUM, "Stripe", stripe_size, 6, size32, "stripesize")
-FIELD(SEGS, seg, NUM, "Chunk", chunk_size, 5, size32, "chunksize")
+FIELD(SEGS, seg, NUM, "Chunk", list, 5, chunksize, "chunksize")
 FIELD(SEGS, seg, NUM, "Region", region_size, 6, size32, "regionsize")
 FIELD(SEGS, seg, NUM, "Start", list, 5, segstart, "seg_start")
 FIELD(SEGS, seg, NUM, "SSize", list, 5, segsize, "seg_size")
